Compressed images, removed archives, testing mobile/modal fix

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/stylesheet.css" type="text/css">
 
+    <!-- Load jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Load AOS - animate on scroll -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Load Typed.js -->
@@ -60,13 +62,13 @@
       <!-- Main Landing -->
       <section id="landing" class="hero landing is-fullheight">
     		<div class="hero-center">
-    			<h1 data-aos="fade-up" data-aos-delay="400">OCEAN 🌊</h1>
-          <h2 data-aos="fade-up" data-aos-delay="700"><a class="button is-medium rainbow" target="_blank" href="Ocean_Ronquillo_Morgan_Resume.pdf"><span id="typed"></span></a></h2>
+    			<h1 data-aos="fade-up" data-aos-delay="100">OCEAN 🌊</h1>
+          <h2 data-aos="fade-up" data-aos-delay="200"><a class="button is-medium rainbow" target="_blank" href="Ocean_Ronquillo_Morgan_Resume.pdf"><span id="typed"></span></a></h2>
         </div>
 
 
 
-    		<span id="scroll" class="hero__scroll" data-aos="fade-up" data-aos-easing="ease" data-aos-delay="2600">
+    		<span id="scroll" class="hero__scroll" data-aos="fade-up" data-aos-delay="300">
           Scroll Down
           <a href="#about">
             <i class="chevron bottom"></i>
@@ -86,7 +88,7 @@
             <p class="subtitle is-7 has-text-centered">DEVELOPER, FOUNDER, CREATIVE</p>
 
             <figure class="image is-480x480">
-              <img class="is-rounded" src="./assets/img/ocean.png" alt="Ocean Ronquillo-Morgan">
+              <img class="is-rounded" src="./assets/img/ocean.jpg" alt="Ocean Ronquillo-Morgan">
             </figure>
             <br />
 
@@ -326,7 +328,7 @@
               <a class="open-modal" data-modal-id="#gamegeistapparel-modal">
                 <div class="card-image project-card is-shady">
                   <figure class="image is-4by3">
-                    <img src="./assets/img/projects/gamegeistapparel.png" alt="GameGeist Apparel">
+                    <img src="./assets/img/projects/gamegeistapparel.jpg" alt="GameGeist Apparel">
                   </figure>
                 </div>
               </a>
@@ -337,7 +339,7 @@
               <a class="open-modal" data-modal-id="#bilk-modal">
                 <div class="card-image project-card is-shady">
                   <figure class="image is-4by3">
-                    <img src="./assets/img/projects/bilk.png" alt="Bilk">
+                    <img src="./assets/img/projects/bilk.jpg" alt="Bilk">
                   </figure>
                 </div>
               </a>
@@ -348,7 +350,7 @@
               <a class="open-modal" data-modal-id="#emaily-modal">
                 <div class="card-image project-card is-shady">
                   <figure class="image is-4by3">
-                    <img src="./assets/img/projects/emaily.png" alt="Emaily">
+                    <img src="./assets/img/projects/emaily.jpg" alt="Emaily">
                   </figure>
                 </div>
               </a>
@@ -363,7 +365,7 @@
               <a class="open-modal" data-modal-id="#sbdigitalagency-modal">
                 <div class="card-image project-card is-shady">
                   <figure class="image is-4by3">
-                    <img src="./assets/img/projects/sbdigitalagency.png" alt="SB Digital Agency">
+                    <img src="./assets/img/projects/sbdigitalagency.jpg" alt="SB Digital Agency">
                   </figure>
                 </div>
               </a>
@@ -540,11 +542,11 @@
           <br />
 
           <h3><b>SCREENSHOTS</b></h3>
-          <img src="./assets/img/projects/screenshots/gamegeist-landing.png">
+          <img src="./assets/img/projects/screenshots/gamegeist_landing.jpg">
           <br />
-          <img src="./assets/img/projects/screenshots/gamegeist-shop.png">
+          <img src="./assets/img/projects/screenshots/gamegeist_shop.jpg">
           <br />
-          <img src="./assets/img/projects/screenshots/gamegeist-order.png">
+          <img src="./assets/img/projects/screenshots/gamegeist_order.jpg">
         </div>
       </div>
       <button aria-label="close" class="delete close-modal modal-close is-large" data-modal-id="#gamegeistapparel-modal"></button>
@@ -680,9 +682,9 @@
           <br />
 
           <h3><b>SCREENSHOTS</b></h3>
-          <img src="./assets/img/projects/screenshots/restaurants1.png">
+          <img src="./assets/img/projects/screenshots/restaurants1.jpg">
           <br />
-          <img src="./assets/img/projects/screenshots/restaurants2.png">
+          <img src="./assets/img/projects/screenshots/restaurants2.jpg">
           <br />
         </div>
       </div>
@@ -695,11 +697,9 @@
     <script>particlesJS.load('particles-js', 'particles.json');</script>
     <!-- Typed.js -->
     <script> var options = {strings: ['^600 Developer, ^150 Creator, ^150 Trojan.'],typeSpeed: 30}; var typed = new Typed('#typed', options);</script>
-    <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <!-- CounterUp.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
     <!-- scrollTo.js -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
     <!-- Custom JS -->
