--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125640904-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-125640904-1');
+    </script>
+    
     <title>Ocean Ronquillo-Morgan | Software Developer, Co-Founder, Trojan</title>
 
     <meta charset="UTF-8">
