--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       gtag('config', 'UA-125640904-1');
     </script>
-    
+
     <title>Ocean Ronquillo-Morgan | Software Developer, Co-Founder, Trojan</title>
 
     <meta charset="UTF-8">
@@ -221,7 +221,7 @@
           <div class="columns">
 
             <!-- Development -->
-            <div class="column">
+            <div data-aos="fade-down-right" class="column">
               <p class="has-text-centered">
                 <span class="icon is-large"><img src="../assets/img/icon-pack/coding.png"></span>
               </p>
@@ -243,7 +243,7 @@
             </div>
 
             <!-- Business -->
-            <div class="column">
+            <div data-aos="fade-down-left" class="column">
               <p class="has-text-centered">
                 <span class="icon is-large"><img src="../assets/img/icon-pack/pie-graphic.png"></span>
               </p>
@@ -261,7 +261,7 @@
 
           <!-- Cinematography -->
           <div class="columns">
-            <div class="column">
+            <div data-aos="fade-up-right" class="column">
               <p class="has-text-centered">
                 <span class="icon is-large"><img src="../assets/img/icon-pack/photo-camera.png"></span>
               </p>
@@ -275,7 +275,7 @@
             </div>
 
             <!-- Trojan -->
-            <div class="column">
+            <div data-aos="fade-up-left" class="column">
               <p class="has-text-centered">
                 <span class="icon is-large"><img src="../assets/img/icon-pack/heart.png"></span>
               </p>
@@ -713,6 +713,6 @@
     <!-- scrollTo.js -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
     <!-- Custom JS -->
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.min.js"></script>
   </body>
 </html>
