--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   	<meta property="og:description" content="Software developer inspired by the unique intersection of technology, business, and cinematography. USC Computer Science & Business Administration 2020. 👍"/>
   	<meta property="og:url" content="http://oceanronquillomorgan.github.io">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://oceanronquillomorgan.github.io/assets/img/favicon.ico"/>
+    <meta property="og:image" content="https://oceanronquillomorgan.github.io/assets/img/ocean.jpg"/>
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
