Updated resume and added minor changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       gtag('config', 'UA-125640904-1');
     </script>
 
-    <title>Ocean Ronquillo-Morgan | Software Developer, Co-Founder, Trojan</title>
+    <title>Ocean Ronquillo-Morgan | Software Developer, Entrepreneur, Trojan</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
   	<meta name="keywords" content= "Ocean Ronquillo-Morgan, Ronquillo-Morgan, Ocean, Full Stack Developer, MERN Stack, Full-Stack Development, Web Developer, Web Development, Co-Founder, Digital Marketing, CTO"/>
 
     <!-- Facebook -->
-    <meta property="og:title" content="Ocean Ronquillo-Morgan | Software Developer, Co-Founder, Trojan">
+    <meta property="og:title" content="Ocean Ronquillo-Morgan | Software Developer, Entrepreneur, Trojan">
   	<meta property="og:description" content="Software developer inspired by the unique intersection of technology, business, and cinematography. USC Computer Science & Business Administration 2020. 👍"/>
   	<meta property="og:url" content="http://oceanronquillomorgan.github.io">
     <meta property="og:type" content="website">
@@ -116,8 +116,9 @@
           <div class="column" data-aos="fade-left">
             <h3><b>SUMMARY</b></h3>
             <p>
-              Computer Science and Business Administration (Class of 2020) undergraduate at the University of Southern California.
-               Currently seeking summer 2019 internship opportunities. Please contact me at <em>oronquil@usc.edu</em> if you'd like to get connected!
+              Computer Science and Business Administration (Class of 2021) undergraduate at the University of Southern California.
+               Currently seeking summer 2019 internship opportunities for software engineering or product management.
+               Please contact me at <em>oronquil@usc.edu</em> if you'd like to get connected!
             </p>
 
             <br />
@@ -135,7 +136,8 @@
             <p>
               I am a tenacious and inquisitive explorer of fields involving software engineering,
               full-stack web development, digital marketing, and web technologies and applications.
-              Inspired by the intersection of technology, business, and cinematography,
+              I have experience with UX/UI Design and Agile Methodologies.
+              Inspired by the intersection of technology, business, and design / cinematography,
               I enjoy finding unique challenges to solve, innovative ways to disrupt these realms,
               and dream of bringing new creativity and innovation to the global market within
               the tech industry.</p>
@@ -230,7 +232,7 @@
               <br />
 
               <!-- Languages -->
-              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Languages:</strong>&nbsp;C++, Java, Python, HTML/CSS, Javascript</p>
+              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Languages:</strong>&nbsp;C++, Java, Python, HTML, CSS, JavaScript</p>
               <br />
 
               <!-- Frameworks -->
@@ -238,7 +240,7 @@
               <br />
 
               <!-- Misc. -->
-              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Misc:</strong>&nbsp;Git, Linux, UX/UI Design</p>
+              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Misc:</strong>&nbsp;Git, Linux, UX/UI Design, Agile Methodologies</p>
 
             </div>
 
@@ -251,7 +253,7 @@
               <h3>Business</h3>
               <br />
 
-              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Experience:</strong> Launched and operated a limited liability corporation which generated over five million unique web hits and a social media and branding following</p>
+              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Experience:</strong> Co-founded an apparel-based limited liability corporation (LLC). Launched and operated another LLC while in high school which generated over five million unique web hits and a social media and branding following</p>
               <br />
               <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Skills:</strong> Search Engine Optimization (SEO), Digital Marketing, Google Analytics</p>
             </div>
@@ -261,7 +263,7 @@
 
           <!-- Cinematography -->
           <div class="columns">
-            <div data-aos="fade-up-right" class="column">
+            <div data-aos="fade-down-right" class="column">
               <p class="has-text-centered">
                 <span class="icon is-large"><img src="../assets/img/icon-pack/photo-camera.png"></span>
               </p>
@@ -275,7 +277,7 @@
             </div>
 
             <!-- Trojan -->
-            <div data-aos="fade-up-left" class="column">
+            <div data-aos="fade-down-left" class="column">
               <p class="has-text-centered">
                 <span class="icon is-large"><img src="../assets/img/icon-pack/heart.png"></span>
               </p>
@@ -285,7 +287,7 @@
 
               <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Computer Science Courses:</strong> Data Structures and Object Oriented Design, Discrete Methods in Computer Science, Programming in Python, Web Publishing</p>
               <br />
-              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Business Courses:</strong> Business Organizational Behavior and Leadership, Microeconomics for Business</p>
+              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Business Courses:</strong> Creating a Tech Start-Up, Fundamentals of Marketing, Business Organizational Behavior and Leadership, Microeconomics for Business</p>
             </div>
           </div>
         </div>
@@ -481,6 +483,16 @@
               </div>
             </div>
 
+            <div class="timeline-item is-primary">
+              <div class="timeline-marker is-danger is-icon">
+                <i class="fas fa-tshirt"></i>
+              </div>
+              <div data-aos="fade-left" class="timeline-content">
+                <p class="heading">September 2018</p>
+                <p>Attended the Forbes Under 30 Summit as a Scholar</p>
+              </div>
+            </div>
+
             <!-- End Timeline -->
             <div class="timeline-header">
               <span class="tag is-medium is-primary">End</span>
@@ -643,7 +655,7 @@
           <h3><b>TECHNOLOGIES USED</b></h3>
 
           <p class="tags">
-              <span class="tag is-medium is-success">Javascript</span>
+              <span class="tag is-medium is-success">JavaScript</span>
               <span class="tag is-medium is-primary">Node.js</span>
               <span class="tag is-medium is-primary">React.js</span>
               <span class="tag is-medium is-primary">Express.js</span>
@@ -687,7 +699,7 @@
           </p>
 
           <h3><b>ROLES &amp; RESPONSIBILITIES</b></h3>
-          <p>As my first start-up gig, I work directly with the CEO as a web developer intern. My biggest project to date has been my role in spearheading the creation of a new landing page, <em>Digital Marketing and Fine Dining,</em> which procured 200+ lead generations in the first month as a result of utilizing an automated workflow sales funnel to capture those in the fine dining market via MailChimp.</p>
+          <p>At my first start-up gig, I work directly with the CEO as a web developer intern. My biggest project to date has been my role in spearheading the creation of a new landing page, <em>Digital Marketing and Fine Dining,</em> which procured 200+ lead generations in the first month as a result of utilizing an automated workflow sales funnel to capture those in the fine dining market via MailChimp.</p>
 
           <br />
 
