--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
       gtag('config', 'UA-125640904-1');
     </script>
 
-    <title>Ocean Ronquillo-Morgan | Software Developer, Entrepreneur, Trojan</title>
+    <title>Ocean Ronquillo-Morgan | Software Developer, Product Manager, Trojan</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO Purposes -->
-    <meta name="description" content="Software developer inspired by the unique intersection of technology, business, and cinematography. USC Computer Science & Business Administration 2020."/>
+    <meta name="description" content="Software developer and product manager inspired by the unique intersection of technology, business, and cinematography. USC Computer Science & Business Administration 2020."/>
   	<meta name="keywords" content= "Ocean Ronquillo-Morgan, Ronquillo-Morgan, Ocean, Full Stack Developer, MERN Stack, Full-Stack Development, Web Developer, Web Development, Co-Founder, Digital Marketing, CTO"/>
 
     <!-- Facebook -->
-    <meta property="og:title" content="Ocean Ronquillo-Morgan | Software Developer, Entrepreneur, Trojan">
-  	<meta property="og:description" content="Software developer inspired by the unique intersection of technology, business, and cinematography. USC Computer Science & Business Administration 2020. 👍"/>
+    <meta property="og:title" content="Ocean Ronquillo-Morgan | Software Developer, Product Manager, Trojan">
+  	<meta property="og:description" content="Software developer and product manager inspired by the unique intersection of technology, business, and cinematography. USC Computer Science & Business Administration 2020. 👍"/>
   	<meta property="og:url" content="http://oceanronquillomorgan.github.io">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://oceanronquillomorgan.github.io/assets/img/ocean.jpg"/>
@@ -73,7 +73,7 @@
       <section id="landing" class="hero landing is-fullheight">
     		<div class="hero-center">
     			<h1 data-aos="fade-up" data-aos-delay="100">OCEAN 🌊</h1>
-          <h2 data-aos="fade-up" data-aos-delay="200"><a class="button is-medium rainbow" target="_blank" href="Ocean_Ronquillo_Morgan_Resume.pdf"><span id="typed"></span></a></h2>
+          <p data-aos="fade-up" data-aos-delay="200"><a class="button is-medium rainbow" target="_blank" href="Ocean_Ronquillo_Morgan_Resume.pdf"><span id="typed"></span></a></p>
         </div>
 
 
@@ -95,7 +95,7 @@
 
           <div class="column is-one-third" data-aos="fade-right">
             <p class="title is-5 has-text-centered">OCEAN RONQUILLO-MORGAN</p>
-            <p class="subtitle is-7 has-text-centered">DEVELOPER, FOUNDER, CREATIVE</p>
+            <p class="subtitle is-7 has-text-centered">DEVELOPER & PRODUCT MANAGER</p>
 
             <figure class="image is-480x480">
               <img class="is-rounded" src="./assets/img/ocean.jpg" alt="Ocean Ronquillo-Morgan">
@@ -107,6 +107,7 @@
               <a class="button is-small" href="Ocean_Ronquillo_Morgan_Resume.pdf" target="_blank" title="Resume"><span class="icon is-small"><i class="fas fa-file-alt"></i></span></a>
               <a class="button is-small" href="https://www.linkedin.com/in/oceanronquillomorgan" target="_blank" title="LinkedIn"><span class="icon is-small"><i class="fab fa-linkedin-in fa-fw"></i></span></a>
               <a class="button is-small" href="https://github.com/OceanRonquilloMorgan" target="_blank" title="GitHub"><span class="icon is-small"><i class="fab fa-github fa-fw"></i></span></a>
+              <a class="button is-small" href="https://www.twitter.com/ayeocean_" target="_blank" title="Twitter"><span class="icon is-small"><i class="fab fa-twitter fa-fw"></i></span></a>
               <a class="button is-small" href="mailto:oronquil@usc.edu" title="Email"><span class="icon is-small"><i class="far fa-envelope fa-fw"></i></span></a>
             </p>
 
@@ -127,7 +128,7 @@
             <p>
                Born in <b>Honolulu, HI</b> &nbsp;🌴&nbsp; I was raised on an island for most of my life.
                I moved to <b>Charleston, SC</b> &nbsp;🏠&nbsp; for a few years.
-               Now, I live in sunny <b>Los Angeles, CA &nbsp;☀️</b>
+               Now, I live in sunny <b>Los Angeles, CA. &nbsp;☀️</b>
             </p>
 
             <br />
@@ -184,7 +185,7 @@
             <div class="level-item has-text-centered">
               <div>
                 <h3 class="heading"><b>PERSONAL PROJECTS</b></h3>
-                <h2 class="subheading"><b><span class="counter">4</span></b></h2>
+                <h2 class="subheading"><b><span class="counter">5</span></b></h2>
               </div>
             </div>
 
@@ -198,7 +199,7 @@
             <div class="level-item has-text-centered">
               <div>
                 <h3 class="heading"><b>Years Alive</b></h3>
-                <h2 class="subheading"><b><span class="counter">20</span></b></h2>
+                <h2 class="subheading"><b><span class="counter">21</span></b></h2>
               </div>
             </div>
 
@@ -240,7 +241,7 @@
               <br />
 
               <!-- Misc. -->
-              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Misc:</strong>&nbsp;Git, Linux, UX/UI Design, Agile Methodologies</p>
+              <p><span class="icon is-small"><img src="../assets/img/icon-pack/arrow.png"></span>&nbsp;<strong>Misc:</strong>&nbsp;Product Management, UX/UI Design, Agile Methodologies, Git</p>
 
             </div>
 
@@ -334,6 +335,17 @@
 
           <!-- Modals -->
           <div class="columns features">
+
+            <!-- Study Grind -->
+            <!-- <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
+              <a class="open-modal" data-modal-id="#studygrind-modal">
+                <div class="card-image project-card is-shady">
+                  <figure class="image is-4by3">
+                    <img src="./assets/img/projects/studygrind.jpg" alt="Study Grind">
+                  </figure>
+                </div>
+              </a>
+            </div> -->
 
             <!-- GameGeist Apparel -->
             <div class="column is-4" data-aos="flip-up" data-aos-delay="200">
@@ -485,11 +497,21 @@
 
             <div class="timeline-item is-primary">
               <div class="timeline-marker is-danger is-icon">
-                <i class="fas fa-tshirt"></i>
+                <i class="fas fa-hand-peace"></i>
+              </div>
+              <div data-aos="fade-right" class="timeline-content">
+                <p class="heading">August 2018</p>
+                <p>Became a Digital Marketing Intern for the USC Credit Union ✌️</p>
+              </div>
+            </div>
+
+            <div class="timeline-item is-primary">
+              <div class="timeline-marker is-danger is-icon">
+                <i class="fas fa-user-tie"></i>
               </div>
               <div data-aos="fade-left" class="timeline-content">
                 <p class="heading">September 2018</p>
-                <p>Attended the Forbes Under 30 Summit as a Scholar</p>
+                <p>Attended the Forbes Under 30 Summit as a Scholar 💼</p>
               </div>
             </div>
 
@@ -516,6 +538,7 @@
           <a data-aos="flip-up" data-aos-delay="100" class="button is-medium" href="https://www.linkedin.com/in/oceanronquillomorgan" target="_blank" title="LinkedIn"><span class="icon is-small"><i class="fab fa-linkedin-in fa-fw"></i></span></a>
           <a data-aos="flip-up" data-aos-delay="200" class="button is-medium" href="https://github.com/OceanRonquilloMorgan" target="_blank" title="GitHub"><span class="icon is-small"><i class="fab fa-github fa-fw"></i></span></a>
           <a data-aos="flip-up" data-aos-delay="300" class="button is-medium" href="https://www.instagram.com/ayeocean" target="_blank" title="Instagram"><span class="icon is-small"><i class="fab fa-instagram fa-fw"></i></span></a>
+          <a data-aos="flip-up" data-aos-delay="400" class="button is-medium" href="https://www.twitter.com/ayeocean_" target="_blank" title="Twitter"><span class="icon is-small"><i class="fab fa-twitter fa-fw"></i></span></a>
           <!-- <a data-aos="flip-up" data-aos-delay="400" class="button is-medium" href="https://angel.co/oceanronquillomorgan" target="_blank" title="AngelList"><span class="icon is-small"><i class="fab fa-angellist fa-fw"></i></span></a> -->
           <a data-aos="flip-up" data-aos-delay="500" class="button is-medium" href="mailto:oronquil@usc.edu" title="Email"><span class="icon is-small"><i class="far fa-envelope fa-fw"></i></span></a>
         </p>
